--- a/_includes/author.html
+++ b/_includes/author.html
@@ -3,7 +3,7 @@
         <img src="{{ site.baseurl}}/assets/images/avatar.jpg" alt="Jaylin Wang"/>
     </div>
     <div class="panel-body">
-        <!-- -->
+        李恒的博客
     </div>
     <div class="panel-footer social">
         <ul>
