--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,6 +1,6 @@
 <div class="panel panel-pithy author">
     <div class="panel-heading avastar">
-        <img src="{{ site.baseurl}}/assets/images/avatar.jpg" alt="Jaylin Wang"/>
+     <!--Photo can be put here! -->
     </div>
     <div class="panel-body">
         李恒的博客
