--- a/_includes/author.html
+++ b/_includes/author.html
@@ -2,9 +2,9 @@
     <div class="panel-heading avastar">
         <img src="{{ site.baseurl}}/assets/images/avatar.jpg" alt="Heng Li"/>
     </div>
-    <div class="panel-body">
+<!--    <div class="panel-body">
         李恒的博客
-    </div>
+    </div> -->
     <div class="panel-footer social">
         <ul>
             <li class="github"><a href="https://github.com/HenngGeneral" alt="github" target="_blank"><i class="fa fa-github"></i></a></li>
