posts margin fix

--- a/assets/stylesheet/modules/_posts.scss
+++ b/assets/stylesheet/modules/_posts.scss
@@ -1,6 +1,9 @@
 //文章列表
 .posts{
   margin-left: 5px; //added by liheng
+  margin-top: 23px; //added by liheng
+  margin-bottom: 22px; //added by liheng
+
   .title{
     padding: 0;
     margin: 0;
