--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,11 +23,11 @@ layout: default
                     </li>
                 </ul>
             </div>
-            <div class="panel-body content">
+            <div class="panel-body content" style="margin-bottom: 0px;">
                 {{content}}
             </div>
-            {% include share.html%}
+            <!--{% include share.html%}-->
         </div>
-        {% include comment.html%}
+        <!--{% include comment.html%}-->
     </div>
 </div>
