--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,5 +1,5 @@
 <!-- 文章列表展示 -->
-<div class="panel panel-pithy posts">
+<div class="panel panel-pithy posts" style="margin-bottom: 0px;">
     <div class="panel-heading">
       <h3 class="title">
         <a href="{{ post.url | prepend: site.baseurl}}"><i class="fa fa-bookmark-o"></i>{{post.title}}</a>
