--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
                     </li>
                 </ul>
             </div>
-            <div class="panel-body content" style="margin-bottom: 0px;">
+            <div class="panel-body content">
                 {{content}}
             </div>
         </div>
