--- a/_includes/author.html
+++ b/_includes/author.html
@@ -4,7 +4,7 @@
     </div>
     <div class="panel-footer social">
         <ul>
-            <li class="github"><a href="https://github.com/HenngGeneral" alt="github" target="_blank"><i class="fa fa-github"></i></a></li>
+            <li class="github"><a href="https://github.com/HengGeneral" alt="github" target="_blank"><i class="fa fa-github"></i></a></li>
             <li class="rss"><a href="{{ '/feed.xml' | prepend: site.baseurl}}" alt="订阅" target="_blank"><i class="fa fa-rss"></i></a></li>
         </ul>
     </div>
