--- a/assets/stylesheet/modules/_post.scss
+++ b/assets/stylesheet/modules/_post.scss
@@ -1,6 +1,7 @@
 //文章显示
 .post{
   margin-left: 5px; //added by liheng
+  margin-bottom: -5px; //added by liheng
   ul{
     margin: 0;
     padding: 0;
