--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
   <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.js"></script>
   <![endif]-->
     <!-- 支持数学公式 -->
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    <script type="text/javascript" src="{{ site.baseurl}}/assets/script/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}" />
 </head>
